--- a/aboutme.html
+++ b/aboutme.html
@@ -19,9 +19,9 @@
 	</ul>
 	<h2>Movies I like:</h2>
 	<ol>
-		<li>Avatar (<a href="">IMDB</a>)</li>
-		<li>Harry Potter and Halfblood Prince(<a href="">IMDB</a>)</li>
-		<li>Hobbit and unexpected adventure(<a href="">IMDB</a>)</li>
+		<li>Avatar (<a href="https://www.imdb.com/title/tt0499549/">IMDB</a>)</li>
+		<li>Harry Potter and the Half-Blood Prince(<a href="https://www.imdb.com/title/tt0417741/?ref_=nv_sr_8">IMDB</a>)</li>
+		<li>The Hobbit: Unexpected Journey(<a href="https://www.imdb.com/title/tt0903624/?ref_=nv_sr_1">IMDB</a>)</li>
 	</ol>
 
 	<div class="happy-sad">
